# threshold

./: .gitignore  .gitmodules  .release-please-manifest.json  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  SPEC.md  TODO.md  gemini-utils.sh  nextest.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json
.agent/workflows/: github-pr-write-up.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: release.yml
apps/threshold/src-tauri/: Cargo.toml  tauri.conf.json
apps/threshold/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/threshold/src-tauri/icons/: icon.icns
apps/threshold/src-tauri/src/: commands.rs  event_logs.rs  lib.rs  main.rs
apps/threshold/src-tauri/src/alarm/: database.rs  error.rs  events.rs  mod.rs  models.rs  scheduler.rs
apps/window-alarm/src-tauri/: Cargo.toml  tauri.conf.json
apps/window-alarm/src-tauri/capabilities/: default.json  desktop.json  theme-utils.json
apps/window-alarm/src-tauri/src/: lib.rs  main.rs
docs/: ALARM_MANAGER.md  ALARM_MANGER.md  ANDROID_INTENTS.md  APP_MANAGEMENT.md  DESKTOP_DEEPLINKS.md  README.md  SwipeToDeleteRow.md  TIME_PREFS.md  UI_TASK.md  UPCOMING_ALARM_NOTIFICATION_SPEC.md  ai-agent-usage-guide.md  alarm-manager-plugin.md  ghcr-setup.md  time-prefs-plugin.md
plugins/alarm-manager/: Cargo.toml  README.md  build.rs
plugins/alarm-manager/android/: README.md  build.gradle.kts  proguard-rules.pro  settings.gradle.kts
plugins/alarm-manager/android/src/main/: AndroidManifest.xml
plugins/alarm-manager/android/src/main/java/com/plugin/alarmmanager/: AlarmManagerPlugin.kt  AlarmReceiver.kt  AlarmRingingService.kt  AlarmUtils.kt  BootReceiver.kt  SetAlarmActivity.kt
plugins/alarm-manager/permissions/: default.toml
plugins/alarm-manager/permissions/autogenerated/: reference.md
plugins/alarm-manager/permissions/autogenerated/commands/: check_active_alarm.toml  get_launch_args.toml  mark_alarm_pipeline_ready.toml  pick_alarm_sound.toml  schedule.toml  set_alarm_event_handler.toml  stop_ringing.toml
plugins/alarm-manager/permissions/schemas/: schema.json
plugins/alarm-manager/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/app-management/: Cargo.toml  README.md  build.rs  package.json
plugins/app-management/android/: build.gradle.kts
plugins/app-management/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/app-management/android/src/main/java/com/plugin/app_management/: AppManagementPlugin.kt
plugins/app-management/android/src/test/java/: ExampleUnitTest.kt
plugins/app-management/guest-js/: index.ts
plugins/app-management/ios/: Package.swift  README.md
plugins/app-management/ios/Sources/: AppManagementPlugin.swift
plugins/app-management/permissions/: default.toml
plugins/app-management/permissions/autogenerated/: reference.md
plugins/app-management/permissions/schemas/: schema.json
plugins/app-management/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/predictive-back/: Cargo.toml  build.rs
plugins/predictive-back/android/: build.gradle.kts
plugins/predictive-back/android/src/main/java/com/plugin/predictiveback/: PredictiveBackPlugin.kt
plugins/predictive-back/permissions/: default.toml
plugins/predictive-back/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/theme-utils/: Cargo.toml  README.md  build.rs
plugins/theme-utils/android/: build.gradle.kts
plugins/theme-utils/android/src/main/java/com/plugin/themeutils/: ThemeUtilsPlugin.kt
plugins/theme-utils/permissions/: default.json  default.toml  get-material-you-colours.toml
plugins/theme-utils/permissions/autogenerated/: reference.md
plugins/theme-utils/permissions/autogenerated/commands/: get_material_you_colours.toml
plugins/theme-utils/permissions/schemas/: schema.json
plugins/theme-utils/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/time-prefs/: Cargo.toml  README.md  build.rs
plugins/time-prefs/android/: build.gradle.kts
plugins/time-prefs/android/src/main/java/ca/liminalhq/threshold/timeprefs/: TimePrefsPlugin.kt
plugins/time-prefs/permissions/: default.toml
plugins/time-prefs/permissions/autogenerated/: reference.md
plugins/time-prefs/permissions/autogenerated/commands/: android.toml  get_time_format.toml
plugins/time-prefs/permissions/schemas/: schema.json
plugins/time-prefs/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/toast/: Cargo.toml  README.md  build.rs  package.json
plugins/toast/android/src/main/java/com/plugin/toast/: Toast.kt  ToastPlugin.kt
plugins/toast/guest-js/: index.ts
plugins/toast/permissions/: default.toml
plugins/toast/permissions/autogenerated/: reference.md
plugins/toast/permissions/schemas/: schema.json
plugins/toast/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/wear-sync/: Cargo.toml  README.md  build.rs
plugins/wear-sync/android/: build.gradle.kts  proguard-rules.pro
plugins/wear-sync/android/src/main/: AndroidManifest.xml
plugins/wear-sync/android/src/main/java/ca/liminalhq/threshold/wearsync/: WearMessageService.kt  WearSyncBootstrapActivity.kt  WearSyncCache.kt  WearSyncPlugin.kt  WearSyncQueue.kt  WearSyncService.kt
plugins/wear-sync/permissions/: default.toml
plugins/wear-sync/permissions/autogenerated/: reference.md
plugins/wear-sync/permissions/autogenerated/commands/: markWatchPipelineReady.toml  mark_watch_pipeline_ready.toml  publishToWatch.toml  publish_to_watch.toml  requestSyncFromWatch.toml  request_sync_from_watch.toml  send_alarm_dismiss.toml  send_alarm_ring.toml  send_alarm_snooze.toml  setWatchMessageHandler.toml  set_watch_message_handler.toml
plugins/wear-sync/permissions/schemas/: schema.json
plugins/wear-sync/src/: batch_collector.rs  conflict_detector.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  publisher.rs  sync_protocol.rs
scripts/: build-release-devcontainer.sh  build-wear.sh  lint-mermaid.sh  update-release-version.mjs
(+233 files in other folders)
