[package]
name = "tauri-plugin-alarm-manager"
version = "0.1.0"
authors = ["Jules"]
edition = "2021"
links = "tauri-plugin-alarm-manager"
description = "Native Alarm Manager for Window Alarm"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }

[build-dependencies]
tauri-plugin = "2.0.0"

[features]
default = []
