[package]
name = "tauri-plugin-theme-utils"
version = "0.1.0"
authors = ["Jules"]
edition = "2021"
description = "Tauri plugin to access system theme utilities (Material You)"

[dependencies]
tauri = { version = "2.0.0", features = ["plugin"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = "2.0.0"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin = "2.0.0"
jni = "0.21"
