[package]
name = "tauri-plugin-theme-utils"
version = "0.1.0"
authors = ["Jules"]
edition = "2021"
links = "tauri-plugin-theme-utils"
description = "Tauri plugin to access system theme utilities (Material You)"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin = "2.0.0"
jni = "0.21"
