[package]
name = "tauri-plugin-toast"
version = "0.1.0"
authors = ["Threshold"]
edition = "2021"
rust-version = "1.77.2"
description = "Generic native toast bridge for Tauri"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-toast"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }

[features]
default = []
