[package]
name = "tauri-plugin-wear-sync"
version = "0.1.0"
authors = ["Threshold"]
edition = "2021"
links = "tauri-plugin-wear-sync"
description = "Wear OS sync plugin for Threshold"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "time"] }
log = "0.4"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }

[features]
default = []
