[package]
name = "threshold"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
log = "0.4"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }

tauri-plugin-alarm-manager = { path = "../../../plugins/alarm-manager" }
tauri-plugin-time-prefs = { path = "../../../plugins/time-prefs" }
tauri-plugin-theme-utils = { path = "../../../plugins/theme-utils" }
tauri-plugin-app-management = { path = "../../../plugins/app-management" }
tauri-plugin-deep-link = { version = "2.0.0", features = [] }
tauri-plugin-log = { version = "2.0.0", features = [] }
tauri-plugin-notification = { version = "2.0.0", features = [] }
tauri-plugin-os = { version = "2.0.0", features = [] }
tauri-plugin-opener = { version = "2.0.0", features = [] }
tauri-plugin-fs = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-app-events = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
