[package]
name = "window-alarm"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-alarm-manager = { path = "../../../plugins/alarm-manager" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
